# Continuity-Node

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
continuity_node/: __init__.py  cli.py  ids.py  ledger.py  node.py  patterns.py  raw_archive.py  records.py  search_index.py
continuity_node/engines/: __init__.py  base.py  ollama.py  stub.py
schemas/: README.md  continuity-node-records.schema.json  validate.py
schemas/examples/: audit_event.example.json  continuity_will.example.json  interchange_abstraction.example.json  interpretation.example.json  lens.example.json  migration.example.json  pattern.example.json  raw.example.json  witness_packet.example.json
tests/: test_loop.py
